Добавить работу с UserActionClient и RecommendationsClient в модули event-service и request-service